jeffreys prior invariant under transformation proof

--- a/lesson_11/model_selection.ipynb
+++ b/lesson_11/model_selection.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f252a209a10>]"
+       "[<matplotlib.lines.Line2D at 0x7f2b4039d490>]"
       ]
      },
      "execution_count": 3,
@@ -359,7 +359,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2529fc9710>"
+       "<matplotlib.legend.Legend at 0x7f2b3fc120d0>"
       ]
      },
      "execution_count": 14,
@@ -553,7 +553,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f25278612d0>"
+       "<matplotlib.legend.Legend at 0x7f2b3f9f76d0>"
       ]
      },
      "execution_count": 20,
@@ -926,7 +926,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2527c792d0>"
+       "<matplotlib.legend.Legend at 0x7f2b3d1b8050>"
       ]
      },
      "execution_count": 31,
@@ -1138,7 +1138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2525bb9d90>"
+       "<matplotlib.legend.Legend at 0x7f2b3d430ed0>"
       ]
      },
      "execution_count": 36,
@@ -2079,7 +2079,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f25259e7c50>"
+       "<matplotlib.legend.Legend at 0x7f2b3c3c5a50>"
       ]
      },
      "execution_count": 46,
@@ -2137,7 +2137,7 @@
    "source": [
     "The model with a degree 5 polynomial is preferred since it has the highest ks-test p-value and the lowest $\\chi^2$. Very informally, by eye, the model with a degree 5 polynomial fits the data well.\n",
     "\n",
-    "This does not agree with the Bayesian result since the Bayes Factor recommends the linear model, but that is because the Bayes Factor is dominated by the determinant term, which is the smallest for the linear model. Occam's razor worked too well.\n",
+    "This does not agree with the Bayesian result since the Bayes Factor recommends the linear model, but that is because the Bayes Factor is dominated by the determinant term, which is the smallest for the linear model. Occam's razor worked too well. This conclusion will change if you use a different file, say data5.npz.\n",
     "\n",
     "The modified chi2 suggests that the model with a degree 5 polynomial is overfitted. However, this modified chi2 was computed assuming that there is no correlation between the data points."
    ]
@@ -2151,7 +2151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-13 00:18:24.052384\n"
+      "2025-12-13 02:24:50.965879\n"
      ]
     }
    ],
