included end points when sampling using np.random.randint

--- a/lesson_4/lesson4_teaser.ipynb
+++ b/lesson_4/lesson4_teaser.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "163025e5-0386-49fa-8ae2-b6068d823c78",
    "metadata": {},
    "outputs": [
@@ -58,13 +58,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.245031\n"
+      "25.519415\n"
      ]
     }
    ],
    "source": [
-    "samples = np.random.randint(1, high=num_faces,\n",
-    "                            size=(num_dice, num_trials), dtype=int)\n",
+    "samples = np.random.randint(low=1, # inclusive\n",
+    "                            high=num_faces+1, # exclusive, so need to +1\n",
+    "                            size=(num_dice, num_trials),\n",
+    "                            dtype=int)\n",
     "min_bag = np.min(samples, axis=0)\n",
     "\n",
     "print(np.mean(min_bag))"
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "5aa3a603-fc79-4c0b-bbd2-ad1f2a6da926",
    "metadata": {},
    "outputs": [
@@ -80,15 +82,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.253906\n"
+      "25.517218\n"
      ]
     }
    ],
    "source": [
     "# Solution on website\n",
     "\n",
-    "#roll_dice = lambda: random.randint(1, 100) # gives expected answer\n",
-    "roll_dice = lambda: np.random.randint(1, 100) # doesn't. lol.\n",
+    "#roll_dice = lambda: random.randint(1, num_faces) # Random integer in [a, b]\n",
+    "roll_dice = lambda: np.random.randint(1, num_faces+1) # Random integer in [a,b)\n",
     "\n",
     "mins = []\n",
     "for i in range(num_trials):\n",
@@ -106,7 +108,8 @@
    "id": "6059d031-a99e-48d3-a9d2-55793f0cc4c3",
    "metadata": {},
    "source": [
-    "So `np.random.randint` is dodgey?\n",
+    "<strike>So `np.random.randint` is dodgey?</strike>\n",
+    "Nah, `np.random.randint` is not dodgey. It simply gives a random integer in [a,b) and doesn't include the end point itself. So you will have to do [a,b+1) if you want to be able to sample b itself.\n",
     "\n",
     "Anyway, the fact that the expectation of a non-negative random variable can be computed via the Survival function instead is called the 'Darth Vader Rule' (see Tatra Mt. Math. Publ. 52 (2012), 53–63), although it was first written in An Introduction to Probability Theory and its Applications. Vol. 2. John\n",
     "Wiley & Sons, Inc. New York, 1966. Actuarists supposedly use it often, but I have not encountered it before in Particle Physics."
@@ -127,14 +130,6 @@
     "&= \\sum_{x=1}^\\infty P(X\\geq x)\\\\\n",
     "\\end{align}\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e98645c-ca59-4af4-94e1-9ffc45a80ca4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
